[gd_scene load_steps=4 format=3 uid="uid://b80wrboq0yfrq"]

[ext_resource type="Script" path="res://scripts/firing_line.gd" id="1_x0rca"]
[ext_resource type="PackedScene" uid="uid://mfvhoc1kpcc0" path="res://scenes/projectiles/bolt_line.tscn" id="2_1ds31"]
[ext_resource type="Script" path="res://scripts/ray_cast_damage.gd" id="2_hd0wa"]

[node name="FiringLine" type="Node2D" node_paths=PackedStringArray("ray_cast")]
script = ExtResource("1_x0rca")
ray_cast = NodePath("RayCast")
bolt_line = ExtResource("2_1ds31")

[node name="RayCast" type="RayCast2D" parent="."]
target_position = Vector2(300, 0)
collide_with_areas = true

[node name="RayCastDamage" type="Node" parent="."]
script = ExtResource("2_hd0wa")
